kubernetes/dev/authservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: ghcr.io/adminseeker/auth-service
        
        resources:
          requests:
            memory: "1024Mi"
            cpu: "200m"
          limits:
            memory: "2048Mi"
            cpu: "900m"
        ports:
        - containerPort: 8090
      imagePullSecrets:
      - name: dockerconfigjson-github-com
        
---

apiVersion: v1
kind: Service
metadata:
  name: authservice-service
spec:
  selector:
    app: authservice
  type: LoadBalancer
  ports:
  - port: 8090
    targetPort: 8090
