kubernetes/dev/cartservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
      - name: cartservice
        image: ghcr.io/adminseeker/cart-service
        
        resources:
          requests:
            memory: "1024Mi"
            cpu: "200m"
          limits:
            memory: "2048Mi"
            cpu: "900m"
        ports:
        - containerPort: 8084
      imagePullSecrets:
      - name: dockerconfigjson-github-com
        
---

apiVersion: v1
kind: Service
metadata:
  name: cartservice-service
spec:
  selector:
    app: cartservice
  type: LoadBalancer
  ports:
  - port: 8084
    targetPort: 8084
