kubernetes/dev/configservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configservice
  template:
    metadata:
      labels:
        app: configservice
    spec:
      containers:
      - name: configservice
        image: ghcr.io/adminseeker/config-service
        
        resources:
          limits:
            memory: "2048Mi"
            cpu: "200m"
        ports:
        - containerPort: 9000
      imagePullSecrets:
      - name: dockerconfigjson-github-com
        
---

apiVersion: v1
kind: Service
metadata:
  name: configservice-service
spec:
  selector:
    app: configservice
  type: LoadBalancer
  ports:
  - port: 9000
    targetPort: 9000
