kubernetes/dev/gatewayserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayserver
  template:
    metadata:
      labels:
        app: gatewayserver
    spec:
      containers:
      - name: gatewayserver
        image: ghcr.io/adminseeker/gateway-server
        
        resources:
          requests:
            memory: "1024Mi"
            cpu: "200m"
          limits:
            memory: "2048Mi"
            cpu: "900m"
        ports:
        - containerPort: 9002
      imagePullSecrets:
      - name: dockerconfigjson-github-com
        
---

apiVersion: v1
kind: Service
metadata:
  name: gatewayserver-service
spec:
  selector:
    app: gatewayserver
  type: LoadBalancer
  ports:
  - port: 9002
    targetPort: 9002
