kubernetes/dev/inventoryservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventoryservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventoryservice
  template:
    metadata:
      labels:
        app: inventoryservice
    spec:
      containers:
      - name: inventoryservice
        image: ghcr.io/adminseeker/inventory-service
        
        resources:
          requests:
            memory: "1024Mi"
            cpu: "200m"
          limits:
            memory: "2048Mi"
            cpu: "900m"
        ports:
        - containerPort: 8083
      imagePullSecrets:
      - name: dockerconfigjson-github-com
        
---

apiVersion: v1
kind: Service
metadata:
  name: inventoryservice-service
spec:
  selector:
    app: inventoryservice
  type: LoadBalancer
  ports:
  - port: 8083
    targetPort: 8083
