kubernetes/dev/orderservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
      - name: orderservice
        image: ghcr.io/adminseeker/order-service
        
        resources:
          requests:
            memory: "1024Mi"
            cpu: "200m"
          limits:
            memory: "2048Mi"
            cpu: "900m"
        ports:
        - containerPort: 8085
      imagePullSecrets:
      - name: dockerconfigjson-github-com
        
---

apiVersion: v1
kind: Service
metadata:
  name: orderservice-service
spec:
  selector:
    app: orderservice
  type: LoadBalancer
  ports:
  - port: 8085
    targetPort: 8085
