kubernetes/dev/productservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      containers:
      - name: productservice
        image: ghcr.io/adminseeker/product-service
        
        resources:
          requests:
            memory: "1024Mi"
            cpu: "200m"
          limits:
            memory: "2048Mi"
            cpu: "900m"
        ports:
        - containerPort: 8082
      imagePullSecrets:
      - name: dockerconfigjson-github-com
        
---

apiVersion: v1
kind: Service
metadata:
  name: productservice-service
spec:
  selector:
    app: productservice
  type: LoadBalancer
  ports:
  - port: 8082
    targetPort: 8082
