kubernetes/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seeker-store-ingress 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "dev-apis.seeker-store.k8s.aravindweb.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: gatewayserver-service
              port:
                number: 9002

  - host: "dev-zipkin.seeker-store.k8s.aravindweb.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: zipkin-service
              port:
                number: 9411

  - host: "dev-kibana.seeker-store.k8s.aravindweb.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kibana-service
              port:
                number: 5601

  - host: "dev-eureka.seeker-store.k8s.aravindweb.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: eurekaserver-service
              port:
                number: 9001
  
  - host: "dev-rabbitmq.seeker-store.k8s.aravindweb.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: rabbitmq-service
              port:
                number: 15672
